# ml-competitions

./: README.md  pyproject.toml
kaggle/playground-s6e4/: README.md
kaggle/playground-s6e4/submissions/: log.md
